--- a/staff/debora-garcia/project/app/src/global.css
+++ b/staff/debora-garcia/project/app/src/global.css
@@ -1,12 +1,13 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;
+
 
 @layer base {
   :root {
     --first-color: rgb(0, 0, 0);
-    --second-color: rgba(164, 151, 158, 0.776);
+    --second-color: rgb(240, 237, 237);
     --third-color: rgb(136, 128, 136);
+    --fourth-color:rgb(193, 65, 97);
   }
 
   * {
