--- a/staff/debora-garcia/project/app/src/views/.components/Header/index.css
+++ b/staff/debora-garcia/project/app/src/views/.components/Header/index.css
@@ -2,8 +2,13 @@
 
 @layer components {
   .Header {
-    @apply flex gap-[3rem] w-full justify-between fixed top-0 p-5  bg-[--third-color] items-center;
+    @apply flex gap-[3rem] w-full justify-between fixed top-0 p-[10px_15px]  bg-[--second-color] items-center;
   }
+}
 
-  /*   @apply w-full flex justify-around fixed bottom-0 p-3 bg-[--third-color]; */
+.user-initial {
+  @apply flex items-center justify-center w-12 h-12 bg-white rounded-full text-[--fourth-color] text-xl font-bold;
+}
+.user-logo {
+  @apply flex justify-center;
 }
