--- a/staff/debora-garcia/project/app/src/views/Workouts/Workouts.css
+++ b/staff/debora-garcia/project/app/src/views/Workouts/Workouts.css
@@ -9,7 +9,7 @@
     @apply flex flex-col justify-center items-center gap-4;
   }
   .button-container Button {
-    @apply p-[10px_20px] rounded-[5px] bg-[--second-color] text-[white] cursor-pointer w-[300px];
+    @apply p-[10px_20px] rounded-[5px] bg-[--third-color] text-[white] cursor-pointer w-[300px];
   }
   .button-container Button:hover {
     @apply bg-[#65524d];
